# PhtonView

./: .gitignore  COPYING  LICENSE  NOTICE  README.md  build.gradle.kts  debug-nikon-d5200-compatibility.md  logcat.txt  phtonview_settings.xml  settings.gradle.kts
.trae/skills/ponytail/: SKILL.md
LICENSES/: MIT License.txt
app/: build.gradle.kts  version.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gphoto2_bridge.cpp  ltdl_preload.cpp  native-lib.cpp  native_bootstrap.cpp
app/src/main/java/com/phtontools/phtonview/: MainActivity.kt  PhtonViewApplication.kt
app/src/main/java/com/phtontools/phtonview/collab/: CollabController.kt  CollabMessage.kt  CollabMessageSerializer.kt  CollabTransport.kt  FakeCollabTransport.kt
app/src/main/java/com/phtontools/phtonview/connection/: CameraConnection.kt  WifiCameraConnection.kt  WifiCameraDiscovery.kt
app/src/main/java/com/phtontools/phtonview/data/local/: SettingsManager.kt
app/src/main/java/com/phtontools/phtonview/data/model/: CameraState.kt  WifiBrandPreset.kt
app/src/main/java/com/phtontools/phtonview/data/repository/: CameraRepository.kt  CameraRepositoryImpl.kt
app/src/main/java/com/phtontools/phtonview/di/: AppModule.kt
app/src/main/java/com/phtontools/phtonview/ndk/: Gphoto2Bridge.kt  Gphoto2ModuleLoader.kt  NativeBridge.kt  NativeLibraryLoader.kt
app/src/main/java/com/phtontools/phtonview/ui/: CameraScreen.kt  CameraViewModel.kt
app/src/main/java/com/phtontools/phtonview/ui/components/: BottomControlPanel.kt  CameraSettingsPanel.kt  ComposeExt.kt  ConnectionHintBanner.kt  ErrorBanner.kt  ExposureControlRow.kt  FocusControlRow.kt  HistogramView.kt  (+8 more)
app/src/main/java/com/phtontools/phtonview/usb/: UsbCameraConnection.kt
app/src/main/java/com/phtontools/phtonview/util/: AppLogger.kt  CrashHandler.kt  UpdateChecker.kt  UxImprovementManager.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_paths.xml  usb_device_filter.xml
app/src/test/java/com/phtontools/phtonview/collab/: CollabControllerTest.kt  CollabMessageSerializerTest.kt
docs/: index.html
scripts/: analyze_translations.py  build-gphoto2-android.ps1  fix_translation.py  fix_translations_full.py  fix_translations_round2.py  fix_translations_round3.py  fix_translations_round4.py  multilang_complete.ps1  translate.py  translate_report.txt
(+19 files in other folders)
